# biomcp

./: .gitignore  .pre-commit-config.yaml  BIOMCP_DATA_FLOW.md  CHANGELOG.md  Dockerfile  Makefile  README.md  THIRD_PARTY_ENDPOINTS.md  docker-compose.yml  lzyank.toml  mkdocs.yml  pyproject.toml  test_performance_analysis.md  wrangler.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  main.yml.disabled  on-release-main.yml  release.yml
docs/: FDA_SECURITY.md  INTEGRATION_TESTING.md  MIGRATION_EXAMPLES.md  changelog.md  faq-condensed.md  index.md  policies.md  robots.txt  transport-protocol.md  troubleshooting.md
docs/apis/: cbioportal.md  clinicaltrials_gov.md  error-codes.md  overview.md  python-sdk.md
docs/backend-services-reference/: 01-overview.md  02-biothings-suite.md  03-cbioportal.md  04-clinicaltrials-gov.md  05-nci-cts-api.md  06-pubtator3.md  07-alphagenome.md
docs/blog/: researcher-persona-resource.md
docs/cli/: articles.md  trials.md  variants.md
docs/concepts/: 01-what-is-biomcp.md  02-the-deep-researcher-persona.md  03-sequential-thinking-with-the-think-tool.md
docs/developer-guides/: 01-server-deployment.md  02-contributing-and-testing.md  03-third-party-endpoints.md  04-transport-protocol.md  05-error-handling.md  06-http-client-and-caching.md  07-performance-optimizations.md  generate_endpoints.py
docs/development/: testing.md
docs/getting-started/: 01-quickstart-cli.md  02-claude-desktop-integration.md  03-authentication-and-api-keys.md
docs/how-to-guides/: 01-find-articles-and-cbioportal-data.md  02-find-trials-with-nci-and-biothings.md  03-get-comprehensive-variant-annotations.md  04-predict-variant-effects-with-alphagenome.md  06-search-nci-organizations-and-interventions.md
docs/policies/: biomcp-privacy.md  biomcp-security.md  biomcp-terms.md
docs/reference/: architecture-diagrams.md  quick-architecture.md  quick-reference.md  visual-architecture.md
docs/stylesheets/: announcement.css  extra.css
docs/tutorials/: alphagenome-api-key-handling.md  alphagenome-prompts.md  alphagenome-setup.md  bigquery_logging.md  biothings-prompts.md  claude-code-biomcp-alphagenome.md  claude-desktop.md  docker-alphagenome.md  macos-claude-desktop-dockerized-biomcp.md  mcp-client.md  mcp-inspector.md  nci-prompts.md  openfda-integration.md  openfda-prompts.md  remote-connection.md  stytch_oauth_setup.md
docs/user-guides/: 01-command-line-interface.md  02-mcp-tools-reference.md  03-integrating-with-ides-and-clients.md
docs/workflows/: all-workflows.md
example_scripts/: mcp_integration.py
scripts/: check_docs_in_mkdocs.py  check_http_imports.py  generate_endpoints_doc.py
src/biomcp/: __init__.py  __main__.py  cbioportal_helper.py  circuit_breaker.py  connection_pool.py  constants.py  core.py  domain_handlers.py  exceptions.py  http_client.py  http_client_simple.py  individual_tools.py  logging_filter.py  metrics.py  metrics_handler.py  parameter_parser.py  prefetch.py  query_parser.py  query_router.py  rate_limiter.py  request_batcher.py  retry.py  router.py  router_handlers.py  shared_context.py  thinking_tool.py  thinking_tracker.py
src/biomcp/articles/: __init__.py  autocomplete.py  fetch.py  preprints.py  search.py  search_optimized.py  unified.py
src/biomcp/biomarkers/: __init__.py  search.py
src/biomcp/cli/: articles.py  biomarkers.py  diseases.py  health.py  interventions.py  main.py  openfda.py  organizations.py  server.py  trials.py  variants.py
src/biomcp/diseases/: __init__.py  getter.py  search.py
src/biomcp/drugs/: __init__.py  getter.py
src/biomcp/genes/: __init__.py  getter.py
src/biomcp/integrations/: __init__.py  biothings_client.py  cts_api.py
src/biomcp/interventions/: __init__.py  getter.py  search.py
src/biomcp/openfda/: __init__.py  adverse_events.py  adverse_events_helpers.py  cache.py  constants.py  (+15 more)
tests/: conftest.py
tests/bdd/: conftest.py
tests/integration/: test_openfda_integration.py  test_preprints_integration.py  test_simple.py  test_variants_integration.py
tests/tdd/: test_biothings_integration.py  test_biothings_integration_real.py  test_circuit_breaker.py  test_concurrent_requests.py  test_connection_pool.py  test_domain_handlers.py  test_drug_approvals.py  test_drug_recalls.py  test_drug_shortages.py  test_endpoint_documentation.py  test_error_scenarios.py  test_europe_pmc_fetch.py  test_mcp_integration.py  test_mcp_tools.py  test_metrics.py  test_nci_integration.py  test_nci_mcp_tools.py  test_network_policies.py  test_offline_mode.py  test_openfda_unified.py  test_pten_r173_search.py  test_request_batcher.py.disabled  test_retry.py  test_router.py  test_shared_context.py.disabled  test_streamable_http.py  test_unified_biothings.py
(+83 files in other folders)
